"New Commit with Changes"

--- a/Reservation_Managmeent_App/appsettings.json
+++ b/Reservation_Managmeent_App/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "Reservation_db" : "Server=localhost; Database=Reservations_DB; Trusted_Connection=True; TrustServerCertificate=True;"
+    "Reservation_db": "Server=(localdb)\\MSSQLLocalDB; Database=Reservations_DB; Trusted_Connection=True; TrustServerCertificate=True;"
   },
     "AllowedHosts": "*"
   }
